aggregator moved into separate module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,4 @@
 rootProject.name = 'request-aggregator'
-
+include 'com.dph.async.executor'
+include 'com.dph.request.aggregator.lib'
+include 'com.dph.blocked.service'
