--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,119 @@ build/
 *.log
 ide
 .ide
+
+
+    Mar_09   lrc:/etc/rc2_d/S89PRESERVE
+disabled       Mar_09   svc:/network/tcp/tcpkey:default
+disabled       Mar_09   svc:/network/ipmp:default
+disabled       Mar_09   svc:/network/routing/ndp:default
+online         Mar_09   svc:/system/early-manifest-import:default
+online         Mar_09   svc:/system/svc/restarter:default
+online         Mar_09   svc:/milestone/immutable-setup:default
+online         Mar_09   svc:/network/socket-config:default
+online         Mar_09   svc:/network/tcp/congestion-control:cubic
+online         Mar_09   svc:/network/tcp/congestion-control:dctcp
+online         Mar_09   svc:/network/tcp/congestion-control:highspeed
+online         Mar_09   svc:/network/tcp/congestion-control:newreno
+online         Mar_09   svc:/network/tcp/congestion-control:vegas
+online         Mar_09   svc:/network/datalink-management:default
+online         Mar_09   svc:/system/filesystem/root:default
+online         Mar_09   svc:/system/boot-archive:default
+online         Mar_09   svc:/system/filesystem/usr:default
+online         Mar_09   svc:/system/timezone:default
+online         Mar_09   svc:/application/man-index:default
+online         Mar_09   svc:/system/cryptosvc:default
+online         Mar_09   svc:/system/sysobj:default
+online         Mar_09   svc:/milestone/devices:default
+online         Mar_09   svc:/network/ip-interface-management:default
+online         Mar_09   svc:/network/loopback:default
+online         Mar_09   svc:/system/device/local:default
+online         Mar_09   svc:/system/name-service/upgrade:default
+online         Mar_09   svc:/network/physical:upgrade
+online         Mar_09   svc:/system/pfexec:default
+online         Mar_09   svc:/system/swap:default
+online         Mar_09   svc:/system/account-policy:default
+online         Mar_09   svc:/system/filesystem/minimal:default
+online         Mar_09   svc:/application/desktop-cache/gio-module-cache:default
+online         Mar_09   svc:/application/desktop-cache/glib-compile-schemas:default
+online         Mar_09   svc:/application/desktop-cache/gtk3-input-method-cache:default
+online         Mar_09   svc:/application/opengl/ogl-select:default
+online         Mar_09   svc:/system/coreadm:default
+online         Mar_09   svc:/system/dbus:default
+online         Mar_09   svc:/system/environment:init
+online         Mar_09   svc:/system/hostid:default
+online         Mar_09   svc:/system/logadm-upgrade:default
+online         Mar_09   svc:/system/pkgserv:default
+online         Mar_09   svc:/system/rad:local
+online         Mar_09   svc:/system/rmtmpfiles:default
+online         Mar_09   svc:/system/security/security-extensions:default
+online         Mar_09   svc:/system/svc/periodic-restarter:default
+online         Mar_09   svc:/system/utmp:default
+online         Mar_09   svc:/system/zones-upgrade:default
+online         Mar_09   svc:/application/font/fc-cache:default
+online         Mar_09   svc:/milestone/unconfig:default
+online         Mar_09   svc:/milestone/config:default
+online         Mar_09   svc:/network/physical:default
+online         Mar_09   svc:/system/identity:cert-expiry
+online         Mar_09   svc:/application/pkg/zones-proxy-client:default
+online         Mar_09   svc:/milestone/name-services:default
+online         Mar_09   svc:/milestone/network:default
+online         Mar_09   svc:/milestone/single-user:default
+online         Mar_09   svc:/network/dns/client:default
+online         Mar_09   svc:/network/initial:default
+online         Mar_09   svc:/network/iptun:default
+online         Mar_09   svc:/network/nfs/fedfs-client:default
+online         Mar_09   svc:/network/routing-setup:default
+online         Mar_09   svc:/network/rpc/bind:default
+online         Mar_09   svc:/network/ssh:default
+online         Mar_09   svc:/system/config-user:default
+online         Mar_09   svc:/system/identity:domain
+online         Mar_09   svc:/system/identity:node
+online         Mar_09   svc:/system/identity:version
+online         Mar_09   svc:/system/name-service/switch:default
+online         Mar_09   svc:/network/service:default
+online         Mar_09   svc:/system/auditset:default
+online         Mar_09   svc:/system/fmd:default
+online         Mar_09   svc:/system/identity:cert
+online         Mar_09   svc:/system/name-service/cache:default
+online         Mar_09   svc:/system/name-service/upgrade:final
+online         Mar_09   svc:/system/ca-certificates:default
+online         Mar_09   svc:/application/dph-dmr-di-dp:default
+online         Mar_09   svc:/application/dph-dmr-sro-video-gen-1:default
+online         Mar_09   svc:/application/dph-uxmas-boot-1:default
+online         Mar_09   svc:/application/php-fpm71:default
+online         Mar_09   svc:/network/nfs/cleanup-upgrade:default
+online         Mar_09   svc:/network/nfs/status:default
+online         Mar_09   svc:/system/cron:default
+online         Mar_09   svc:/system/filesystem/local:default
+online         Mar_09   svc:/system/restore_coreadm:default
+online         Mar_09   svc:/application/pkg/repositories-setup:default
+online         Mar_09   svc:/network/inetd:default
+online         Mar_09   svc:/network/nfs/mapid:default
+online         Mar_09   svc:/network/nfs/nlockmgr:default
+online         Mar_09   svc:/system/filesystem/reparse:default
+online         Mar_09   svc:/application/network/tengine:default
+online         Mar_09   svc:/network/nfs/rquota:default
+online         Mar_09   svc:/network/nfs/server:default
+online         Mar_09   svc:/network/rpc/gss:default
+online         Mar_09   svc:/network/rpc/smserver:default
+online         Mar_09   svc:/network/shares:default
+online         Mar_09   svc:/application/database/postgresql:version_94
+online         Mar_09   svc:/application/network/nginx:default
+online         Mar_09   svc:/milestone/self-assembly-complete:default
+online         Mar_09   svc:/system/console-login:default
+online         Mar_09   svc:/milestone/goals:default
+online         Mar_09   svc:/milestone/multi-user-server:default
+online         Mar_09   svc:/milestone/multi-user:default
+online         Mar_09   svc:/system/kstat2adm:default
+online         Mar_09   svc:/system/system-log:default
+online         Mar_09   svc:/application/database/mysql:version_57
+online         Mar_09   svc:/system/salt-jteam-minion:default
+online         Mar_09   svc:/system/salt-minion:default
+online         Mar_18   svc:/network/http:tomcat8
+online         Mar_22   svc:/application/dph-dstr-item-is-1:default
+online         Mar_22   svc:/application/dph-dstr-data-accessor:default
+online         Mar_22   svc:/application/dph-dstr-dss-supersize-1:default
+online         Mar_22   svc:/application/dph-supersize-service:default
+online         16:10:31 svc:/application/dph-dstr-dss-native-1:default
+online         16:11:16 svc:/system/manifest-import:default
