--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,5 @@ rootProject.name = 'request-aggregator'
 include 'com.dph.async.executor'
 include 'com.dph.request.aggregator.lib'
 include 'com.dph.blocked.service'
+include 'time'
+
